--- a/notebooks/city_bikes.ipynb
+++ b/notebooks/city_bikes.ipynb
@@ -16,10 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "url = \"http://api.citybik.es/v2/networks/broward\"\n",
+    "r=requests.get(url)\n",
+    "r.json=json.loads(r.text)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,10 +36,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Hollywood North Beach',\n",
+       "  'latitude': 26.03444,\n",
+       "  'longitude': -80.11455,\n",
+       "  'free_bikes': 1,\n",
+       "  'empty_slots': 10},\n",
+       " {'name': 'Earl Lifshey 3.0',\n",
+       "  'latitude': 26.16739,\n",
+       "  'longitude': -80.10032,\n",
+       "  'free_bikes': 10,\n",
+       "  'empty_slots': 2},\n",
+       " {'name': 'Atlantic & Briny',\n",
+       "  'latitude': 26.23237,\n",
+       "  'longitude': -80.08965,\n",
+       "  'free_bikes': 6,\n",
+       "  'empty_slots': 3},\n",
+       " {'name': 'Esplanade Park',\n",
+       "  'latitude': 26.12026,\n",
+       "  'longitude': -80.14819,\n",
+       "  'free_bikes': 6,\n",
+       "  'empty_slots': 5},\n",
+       " {'name': 'Bayshore & A1A 3.0',\n",
+       "  'latitude': 26.12807,\n",
+       "  'longitude': -80.10368,\n",
+       "  'free_bikes': 12,\n",
+       "  'empty_slots': 5},\n",
+       " {'name': 'Holiday Park at Sunrise',\n",
+       "  'latitude': 26.13707,\n",
+       "  'longitude': -80.12981,\n",
+       "  'free_bikes': 9,\n",
+       "  'empty_slots': 2},\n",
+       " {'name': 'Broadwalk at Jefferson St.',\n",
+       "  'latitude': 26.00656,\n",
+       "  'longitude': -80.116,\n",
+       "  'free_bikes': 17,\n",
+       "  'empty_slots': 0},\n",
+       " {'name': 'Las Olas Beach Park',\n",
+       "  'latitude': 26.11837,\n",
+       "  'longitude': -80.10492,\n",
+       "  'free_bikes': 5,\n",
+       "  'empty_slots': 9},\n",
+       " {'name': 'Las Olas & SE 9th Ave',\n",
+       "  'latitude': 26.11954,\n",
+       "  'longitude': -80.13407,\n",
+       "  'free_bikes': 9,\n",
+       "  'empty_slots': 2},\n",
+       " {'name': 'George English Park',\n",
+       "  'latitude': 26.13813,\n",
+       "  'longitude': -80.1157,\n",
+       "  'free_bikes': 5,\n",
+       "  'empty_slots': 6},\n",
+       " {'name': 'Galleria',\n",
+       "  'latitude': 26.13776,\n",
+       "  'longitude': -80.11248,\n",
+       "  'free_bikes': 4,\n",
+       "  'empty_slots': 7},\n",
+       " {'name': 'Courthouse (540 Bldg)',\n",
+       "  'latitude': 26.11501,\n",
+       "  'longitude': -80.14008,\n",
+       "  'free_bikes': 4,\n",
+       "  'empty_slots': 7},\n",
+       " {'name': 'Sunrise & Ocean 3.0',\n",
+       "  'latitude': 26.13778,\n",
+       "  'longitude': -80.10325,\n",
+       "  'free_bikes': 1,\n",
+       "  'empty_slots': 12},\n",
+       " {'name': 'Las Olas Parking Garage',\n",
+       "  'latitude': 26.11975,\n",
+       "  'longitude': -80.10715,\n",
+       "  'free_bikes': 8,\n",
+       "  'empty_slots': 3},\n",
+       " {'name': 'Lauderdale by the Sea',\n",
+       "  'latitude': 26.19081,\n",
+       "  'longitude': -80.09666,\n",
+       "  'free_bikes': 5,\n",
+       "  'empty_slots': 5},\n",
+       " {'name': 'Convention Center 3.0',\n",
+       "  'latitude': 26.10088,\n",
+       "  'longitude': -80.12377,\n",
+       "  'free_bikes': 9,\n",
+       "  'empty_slots': 3},\n",
+       " {'name': 'Sebastian Lot 3.0',\n",
+       "  'latitude': 26.12431,\n",
+       "  'longitude': -80.1041,\n",
+       "  'free_bikes': 4,\n",
+       "  'empty_slots': 10},\n",
+       " {'name': 'South Beach Lot 3.0',\n",
+       "  'latitude': 26.11414,\n",
+       "  'longitude': -80.10482,\n",
+       "  'free_bikes': 2,\n",
+       "  'empty_slots': 7},\n",
+       " {'name': 'South Beach Lot #2 3.0',\n",
+       "  'latitude': 26.10985,\n",
+       "  'longitude': -80.10608,\n",
+       "  'free_bikes': 5,\n",
+       "  'empty_slots': 5},\n",
+       " {'name': 'Willingham Park',\n",
+       "  'latitude': 26.15495,\n",
+       "  'longitude': -80.10109,\n",
+       "  'free_bikes': 3,\n",
+       "  'empty_slots': 11}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parsed_data = []\n",
+    "for info in r.json['network']['stations']:\n",
+    "    info_data = {\n",
+    "        \"name\": info['name'],\n",
+    "        \"latitude\": info['latitude'],\n",
+    "        \"longitude\": info['longitude'],\n",
+    "        \"free_bikes\": info['free_bikes'],\n",
+    "        \"empty_slots\": info['empty_slots'],\n",
+    "    }\n",
+    "    parsed_data.append(info_data)\n",
+    "parsed_data"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,15 +172,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>free_bikes</th>\n",
+       "      <th>empty_slots</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hollywood North Beach</td>\n",
+       "      <td>26.03444</td>\n",
+       "      <td>-80.11455</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Earl Lifshey 3.0</td>\n",
+       "      <td>26.16739</td>\n",
+       "      <td>-80.10032</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Atlantic &amp; Briny</td>\n",
+       "      <td>26.23237</td>\n",
+       "      <td>-80.08965</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Esplanade Park</td>\n",
+       "      <td>26.12026</td>\n",
+       "      <td>-80.14819</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bayshore &amp; A1A 3.0</td>\n",
+       "      <td>26.12807</td>\n",
+       "      <td>-80.10368</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Holiday Park at Sunrise</td>\n",
+       "      <td>26.13707</td>\n",
+       "      <td>-80.12981</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Broadwalk at Jefferson St.</td>\n",
+       "      <td>26.00656</td>\n",
+       "      <td>-80.11600</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Las Olas Beach Park</td>\n",
+       "      <td>26.11837</td>\n",
+       "      <td>-80.10492</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Las Olas &amp; SE 9th Ave</td>\n",
+       "      <td>26.11954</td>\n",
+       "      <td>-80.13407</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>George English Park</td>\n",
+       "      <td>26.13813</td>\n",
+       "      <td>-80.11570</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Galleria</td>\n",
+       "      <td>26.13776</td>\n",
+       "      <td>-80.11248</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Courthouse (540 Bldg)</td>\n",
+       "      <td>26.11501</td>\n",
+       "      <td>-80.14008</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Sunrise &amp; Ocean 3.0</td>\n",
+       "      <td>26.13778</td>\n",
+       "      <td>-80.10325</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Las Olas Parking Garage</td>\n",
+       "      <td>26.11975</td>\n",
+       "      <td>-80.10715</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Lauderdale by the Sea</td>\n",
+       "      <td>26.19081</td>\n",
+       "      <td>-80.09666</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Convention Center 3.0</td>\n",
+       "      <td>26.10088</td>\n",
+       "      <td>-80.12377</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Sebastian Lot 3.0</td>\n",
+       "      <td>26.12431</td>\n",
+       "      <td>-80.10410</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>South Beach Lot 3.0</td>\n",
+       "      <td>26.11414</td>\n",
+       "      <td>-80.10482</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>South Beach Lot #2 3.0</td>\n",
+       "      <td>26.10985</td>\n",
+       "      <td>-80.10608</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Willingham Park</td>\n",
+       "      <td>26.15495</td>\n",
+       "      <td>-80.10109</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          name  latitude  longitude  free_bikes  empty_slots\n",
+       "0        Hollywood North Beach  26.03444  -80.11455           1           10\n",
+       "1             Earl Lifshey 3.0  26.16739  -80.10032          10            2\n",
+       "2             Atlantic & Briny  26.23237  -80.08965           6            3\n",
+       "3               Esplanade Park  26.12026  -80.14819           6            5\n",
+       "4           Bayshore & A1A 3.0  26.12807  -80.10368          12            5\n",
+       "5      Holiday Park at Sunrise  26.13707  -80.12981           9            2\n",
+       "6   Broadwalk at Jefferson St.  26.00656  -80.11600          17            0\n",
+       "7          Las Olas Beach Park  26.11837  -80.10492           5            9\n",
+       "8        Las Olas & SE 9th Ave  26.11954  -80.13407           9            2\n",
+       "9          George English Park  26.13813  -80.11570           5            6\n",
+       "10                    Galleria  26.13776  -80.11248           4            7\n",
+       "11       Courthouse (540 Bldg)  26.11501  -80.14008           4            7\n",
+       "12         Sunrise & Ocean 3.0  26.13778  -80.10325           1           12\n",
+       "13     Las Olas Parking Garage  26.11975  -80.10715           8            3\n",
+       "14       Lauderdale by the Sea  26.19081  -80.09666           5            5\n",
+       "15       Convention Center 3.0  26.10088  -80.12377           9            3\n",
+       "16           Sebastian Lot 3.0  26.12431  -80.10410           4           10\n",
+       "17         South Beach Lot 3.0  26.11414  -80.10482           2            7\n",
+       "18      South Beach Lot #2 3.0  26.10985  -80.10608           5            5\n",
+       "19             Willingham Park  26.15495  -80.10109           3           11"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "stations_df = pd.DataFrame(parsed_data)\n",
+    "stations_df"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -66,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
